2001-01-22  Lars J. Aas  <somelarsa@sim.no>

	* aclang.m4 (_AC_PROG_CXX_EXIT_DECLARATION): First try no declaration,
	then '#include <stdlib.h>', before trying the explicit declarations.

2001-01-22  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_COMPILE_IFELSE): Wrap the test -s in
	AC_TRY_COMMAND to improve config.log.
	(_AC_INIT_DEFAULTS): Don't define ac_exeext and ac_objext to
	highlight failures.

2001-01-22  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Work around a currently
	impossible to describe bug of SunOS 4.1.3 which causes a shell
	crash when using `VAR=${VAR="$default"}'.
	Reported and diagnosed by Kevin Ryde.

2001-01-22  Akim Demaille  <akim@epita.fr>

	* acfunctions.m4 (AC_FUNC_GETGROUPS): Typo :(.

2001-01-22  Lars J. Aas  <larsa@sim.no>

	* aclang.m4 (_AC_COMPILER_EXEEXT_DEFAULT, _AC_COMPILER_EXEEXT_O):
	Export ac_cv_exeext so ltconfig believes the value is cached and
	skips its own faulty test.

2001-01-22  Jim Meyering  <meyering@lucent.com>

	* actypes.m4 (AC_TYPE_GETGROUPS): Double quote the test program
	body.

2001-01-22  Tim Van Holder  <tim.van.holder@pandora.be>

	* aclang.m4 (AC_LANG_INT_SAVE, AC_LANG_INT_SAVE(C)): Use
	conftest.val, not conftestval.
	* acgeneral.m4 (_AC_COMPUTE_INT_RUN, _AC_COMPUTE_INT):
	Likewise.

2001-01-22  Akim Demaille  <akim@epita.fr>

	Create actypes.m4.

	* acgeneral.m4 (AC_CHECK_SIZEOF, _AC_CHECK_TYPE_NEW)
	(AC_CHECK_TYPES, _AC_CHECK_TYPE_OLD)
	(_AC_CHECK_TYPE_REPLACEMENT_TYPE_P, _AC_CHECK_TYPE_MAYBE_TYPE_P)
	(AC_CHECK_TYPE, AC_CHECK_MEMBER, AC_CHECK_MEMBERS): Move into...
	* actypes.m4: here.
	* acgeneral.m4 (AC_TYPE_GETGROUPS, AM_TYPE_PTRDIFF_T)
	(AC_TYPE_UID_T, AC_TYPE_SIZE_T, AC_TYPE_PID_T, AC_TYPE_OFF_T)
	(AC_TYPE_MODE_T, AC_INT_16_BITS, AC_LONG_64_BITS, AC_TYPE_SIGNAL)
	(AC_STRUCT_TM, AC_STRUCT_TIMEZONE, AC_STRUCT_ST_BLKSIZE)
	(AC_STRUCT_ST_BLOCKS, AC_STRUCT_ST_RDEV): Move into...
	* actypes.m4: here.
	Adjust the test suite.
